syntax = "proto3";

package vyletkafka;
option go_package = "./;vyletkafka";

import "buf/validate/validate.proto";

import "google/protobuf/timestamp.proto";

message FirehoseEvent {
  string did = 1 [
    (buf.validate.field).required = true
  ];

  google.protobuf.Timestamp timestamp = 2 [
    (buf.validate.field).required = true
  ];

  optional Commit commit = 3;
  optional bytes account = 4;
  optional bytes identity = 5;
}

message Commit {
  string rev = 1;
  CommitOperation operation = 2;
  string collection = 3;
  string rkey = 4;
  bytes record = 5; // json.RawMessage as opaque bytes
  string cid = 6;
}

enum CommitOperation {
  COMMIT_OPERATION_UNSPECIFIED = 0;
  COMMIT_OPERATION_CREATE = 1;
  COMMIT_OPERATION_UPDATE = 2;
  COMMIT_OPERATION_DELETE = 3;
}

message SequenceCursor {
  int64 sequence = 1;
  bool saved_on_exit = 2;
}
